== New and Noteworthy ==

== 1.0 ==

* New position method
* New offsetParent method
* New lite option for offset
* New relativeTo option for offset
* API CHANGE: The border option is now defaulted to 'false' for offset
* scrollTop and scrollLeft are now setters and getters
* New test suite
* Updated inline docs and added lite option to visual offset text/example
* Throw meaningful error when the jQuery collection is empty
* Normalized window width and height for Firefox and Opera
* Element's scroll offsets no longer included in calculations for offset
* Added support for Body element in offset
* Change file name and format to better follow plugin standards
* Lots of minor bug fixes


== Pre 1.0 ==

* Fixed calculation of offsets when a border is present on the body
* Fixed body margin issue for standards compliant pages in IE (introduced in Rev. 1395)
* Fixed calculation of scroll offsets when the parent is the body
* Fixed body margin issue in IE for the offset method
* Removed rogue console.log statement from dimensions plugin
* Adding some comments to offset method
* Mozilla not including border on static elements with overflow != visible
* Opera not calculating offset properly with inline elements
* Updated dimensions methods innerHeight, innerWidth, outerHeight and outerWidth to work with elements that have display: none
* Added the relevant svn:keywords to dimensions
* API CHANGE: Offset method takes an options hash and optional return object.